# verus-lightclient-ffi

./: .gitignore  Makefile  Package.swift
rust/: Cargo.toml  build.rs  rust-toolchain.toml
rust/src/: lib.rs
