[package]
name = "libzcashlc"
version = "0.8.1"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Francisco Gindre",
    "Lukas Korba <lukas@tangiblecodes.com>",
]
license = "MIT"
edition = "2021"
rust-version = "1.60"
build = "build.rs"

[dependencies]
hex = "0.4"
memuse = "0.2.1"
orchard = "0.8"
prost = "0.12"
rusqlite = "0.29"
sapling = { package = "sapling-crypto", version = "0.1", default-features = false }
schemer = "0.2.1"
secp256k1 = "0.26"
secrecy = "0.8"
zcash_address = { version = "0.3" }
zcash_client_backend = { version = "0.12.1", features = ["unstable"] }
zcash_client_sqlite = { version = "0.10.3", features = ["linearscanning", "unstable"] }
zcash_primitives = "0.15"
zcash_proofs = "0.15"
verus_zfunc = "0.1.0"

# FFI
anyhow = "1.0"
ffi_helpers = "0.3"

# Initialization
cfg-if = "1.0"
rayon = "1.7"

# Logging
log-panics = "2.0"
once_cell = "1.0"
sharded-slab = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
bindgen = "0.69"
cbindgen = "0.26"
cc = "1.0"

## Uncomment this to test librustzcash changes locally
#[patch.crates-io]
#zcash_address = { path = '<pathtolibrustzcashroot>/zcash_address' }
#zcash_client_backend = { path = '<pathtolibrustzcashroot>/zcash_client_backend' }
#zcash_client_sqlite = { path = '<pathtolibrustzcashroot>/zcash_client_sqlite' }
#zcash_primitives = { path = '<pathtolibrustzcashroot>/zcash_primitives' }
#zcash_proofs = { path = '<pathtolibrustzcashroot>/zcash_proofs' }

## Uncomment this to test someone else's librustzcash changes in a branch
[patch.crates-io]
zcash_address = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree-security-fixes" }
zcash_client_backend = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree-security-fixes" }
zcash_client_sqlite = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree-security-fixes" }
zcash_primitives = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree-security-fixes" }
zcash_proofs = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree-security-fixes" }
verus_zfunc = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree-security-fixes" }

[lib]
name = "zcashlc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true
